--- a/src/app/page2/page2.page.html
+++ b/src/app/page2/page2.page.html
@@ -1,12 +1,12 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Página de Apresentação
+      Página 2
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <ion-button [routerLink]="['/home']">Ir para Home</ion-button>
   <ion-button [routerLink]="['/page1']">Ir para Página 1</ion-button>
-  <ion-button [routerLink]="['/page2']">Ir para Página 2</ion-button>
 </ion-content>
